--- a/penthouse.css
+++ b/penthouse.css
@@ -13,6 +13,45 @@ background-image: url(logo2.jpeg);
 
 }
 
+.tabs-container {
+  display: flex;
+  gap: 10px;
+}
+
+/* Estilo de cada pestaña */
+.tab {
+  flex: 1;
+  text-align: center;
+  padding: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #fff;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+/* Estado activo de la pestaña */
+.tab.active {
+  background-color: #007BFF;
+  color: #fff;
+  border-color: #007BFF;
+}
+
+/* Contenido de las pestañas */
+.tab-content {
+  margin-top: 20px;
+  display: none;
+  font-size: 18px;
+  text-align: center;
+}
+
+/* Mostrar el contenido activo */
+.tab-content.active {
+  display: block;
+}
+
 .video-grid {
 
   display: grid;
