--- a/penthouse.css
+++ b/penthouse.css
@@ -20,7 +20,7 @@ background-image: url(logo2.jpeg);
   flex: 1;
   text-align: center;
   padding: 20px;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   border: 2px solid #ccc;
   border-radius: 5px;
@@ -33,8 +33,8 @@ background-image: url(logo2.jpeg);
   display: block;
   text-decoration: none;
   color: #000;
-  padding: 20px 40px;
-  font-size: 36px;
+  padding: 20px 20px;
+  font-size: 20px;
   font-weight: bold;
   border: 3px solid #ccc;
   border-radius: 10px;
@@ -45,16 +45,16 @@ background-image: url(logo2.jpeg);
 
 /* Efecto al pasar el cursor */
 .tab-link:hover {
-  background-color: #007BFF;
+  background-color: #f1d77779;
   color: #fff;
   transform: scale(1.05);
 }
 
 /* Estado activo (si necesitas incluirlo en el futuro) */
 .tab-link.active {
-  background-color: #007BFF;
+  background-color: #f1d77779;
   color: #fff;
-  border-color: #007BFF;
+  border-color: #f1d77779;
 }
 
 .video-grid {
