--- a/penthouse.css
+++ b/penthouse.css
@@ -45,7 +45,7 @@ background-image: url(logo2.jpeg);
 
 /* Efecto al pasar el cursor */
 .tab-link:hover {
-  background-color: #f1d77779;
+  background-color: #fff;
   color: #fff;
   transform: scale(1.05);
 }
