--- a/penthouse.css
+++ b/penthouse.css
@@ -24,6 +24,16 @@ background-image: url(logo2.jpeg);
   gap: 5vw;            /* Separación entre cuadros */
 }
 
+.tabs {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 90vw;         /* Ocupa casi todo el ancho de la ventana */
+  height: 70vh;        /* Ocupa gran parte del alto de la ventana */
+  margin: 40px auto;   /* Centrado */
+  gap: 5vw;            /* Separación entre cuadros */
+}
+
 .tab-link {
   flex: 1 1 0;
   aspect-ratio: 1/1;                /* Cuadrado */
