--- a/penthouse.css
+++ b/penthouse.css
@@ -72,7 +72,7 @@ width: 320px; /* Adjust the width as needed */
 height: 240px; /* Adjust the height as needed */
 }
 
-
+body { background: tomato !important; }
 
 body{
   background-color: burlywood;
