--- a/penthouse.css
+++ b/penthouse.css
@@ -35,8 +35,8 @@ background-image: url(logo2.jpeg);
   align-items: center;
   border-radius: 25px;
   border: 4px solid #ccc;
-  background: #4a90e2;  /* Color base azul */
-  color: #fff;          /* Texto blanco */
+  background: #e7c797cc;  /* Color base azul */
+  color: #e7c797cc;          /* Texto blanco */
   box-shadow: 0 4px 24px rgba(0,0,0,0.1);
   transition: transform 0.2s, background 0.3s, color 0.3s;
   text-align: center;
