--- a/penthouse.css
+++ b/penthouse.css
@@ -45,7 +45,7 @@ background-image: url(logo2.jpeg);
 /* Color al pasar el cursor */
 .tab-link:hover,
 .tab-link.active {
-  background: #ecebe9;  /* Color de cambio al pasar el mouse (naranja) */
+  background: #f8f8f7;  /* Color de cambio al pasar el mouse (naranja) */
   color: #fff;
   border-color: #f0efee;
   transform: scale(1.03);
