--- a/penthouse.css
+++ b/penthouse.css
@@ -35,8 +35,8 @@ background-image: url(logo2.jpeg);
   align-items: center;
   border-radius: 25px;
   border: 4px solid #ccc;
-  background: #e7c797cc;  /* Color base azul */
-  color: #e7c797cc;          /* Texto blanco */
+  background: #e7c797cc;  /* Color de fondo */
+  color: #573a16;         /* Color de texto visible */
   box-shadow: 0 4px 24px rgba(0,0,0,0.1);
   transition: transform 0.2s, background 0.3s, color 0.3s;
   text-align: center;
@@ -45,9 +45,9 @@ background-image: url(logo2.jpeg);
 /* Color al pasar el cursor */
 .tab-link:hover,
 .tab-link.active {
-  background: #f8e4a4;  /* Color de cambio al pasar el mouse (naranja) */
+  background: #f8e4a4;
   color: #fff;
-  border-color: #f8e4a4;;
+  border-color: #f8e4a4;
   transform: scale(1.03);
 }
 .video-grid {
