--- a/penthouse.css
+++ b/penthouse.css
@@ -36,8 +36,8 @@ background-image: url(logo2.jpeg);
   border-radius: 25px;
   border: 4px solid #ccc;
   background: #e7c797cc;  /* Color de fondo */
-  color: #573a16;         /* Color de texto visible */
-  box-shadow: 0 4px 24px rgba(241, 232, 199, 0.1);
+  color: #000000;         /* Color de texto visible */
+  box-shadow: 0 4px 24px rgba(255, 255, 255, 0.1);
   transition: transform 0.2s, background 0.3s, color 0.3s;
   text-align: center;
 }
