--- a/penthouse.css
+++ b/penthouse.css
@@ -19,8 +19,8 @@ background-image: url(logo2.jpeg);
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  width: 40vw;         /* Ocupa casi todo el ancho de la ventana */
-  height: 40vh;        /* Ocupa gran parte del alto de la ventana */
+  width: 40px;         /* Ocupa casi todo el ancho de la ventana */
+  height: 40px;        /* Ocupa gran parte del alto de la ventana */
   margin: 40px auto;   /* Centrado */
   gap: 5vw;            /* Separación entre cuadros */
 }
